# pixediter

./: .pre-commit-config.yaml  LICENSE  README.md  borders.py  colors.py  events.py  main.py  requirements-dev.txt  setup.cfg  terminal.py
src/pixediter/: ColorSelector.py  ToolSelector.py  __main__.py  application.py  borders.py  cli.py  colors.py  events.py  image.py  terminal.py  tools.py  utils.py
src/pixediter/widgets/: ColorAdjuster.py  DrawArea.py  Palette.py  TerminalWidget.py  Toolbox.py  __init__.py
tests/: app_test.py
