[metadata]
name = pixediter
version = attr: pixediter.__version__
description = Terminal based image editor with mouse support
url = https://github.com/andriamanitra/pixediter
author = Andriamanitra
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Multimedia :: Graphics :: Editors
    Topic :: Multimedia :: Graphics :: Viewers

[options]
packages = find:
package_dir =
    =src
install_requires =
    Pillow>=9.1.1
python_requires = >= 3.10.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pixediter = pixediter.__main__:main
